fix: align del titulo de pagina puesto en start

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,7 +62,7 @@ h6 {
 .pagetitle h1 {
   font-size: 24px;
   margin-bottom: 0;
-  text-align: center;
+  text-align: start;
   font-weight: 600;
   color: #63685e;
 }
